--- a/network/pom.xml
+++ b/network/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>Rings</artifactId>
 		<groupId>com.almostrealism</groupId>
-		<version>0.27</version>
+		<version>0.28</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -14,14 +14,14 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.almostrealism</groupId>
-			<artifactId>ar-space</artifactId>
+			<artifactId>ar-utils</artifactId>
 			<version>${common.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>ar-raytracer</artifactId>
-			<version>0.27</version>
+			<version>0.28</version>
 		</dependency>
 
 		<dependency>
