--- a/absorption/pom.xml
+++ b/absorption/pom.xml
@@ -14,7 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.almostrealism</groupId>
-			<artifactId>engine</artifactId>
+			<artifactId>ar-engine</artifactId>
 			<version>0.29</version>
 		</dependency>
 
