--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>engine</artifactId>
+	<artifactId>ar-engine</artifactId>
 
 	<dependencies>
 		<dependency>
