--- a/raytracer/pom.xml
+++ b/raytracer/pom.xml
@@ -14,7 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.almostrealism</groupId>
-			<artifactId>gl</artifactId>
+			<artifactId>ar-gl</artifactId>
 			<version>0.29</version>
 		</dependency>
 	</dependencies>
