--- a/shading/pom.xml
+++ b/shading/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>shading</artifactId>
+	<artifactId>ar-shading</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -20,7 +20,7 @@
 
 		<dependency>
 			<groupId>com.almostrealism</groupId>
-			<artifactId>engine</artifactId>
+			<artifactId>ar-engine</artifactId>
 			<version>0.29</version>
 		</dependency>
 	</dependencies>
