--- a/pom.xml
+++ b/pom.xml
@@ -82,15 +82,16 @@
 
 	<distributionManagement>
 		<repository>
-			<id>central</id>
-			<url>https://almostrealism.jfrog.io/artifactory/default-libs-release</url>
+			<id>github</id>
+			<name>GitHub Almost Realism Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/almostrealism/common</url>
 		</repository>
 	</distributionManagement>
 
 	<repositories>
 		<repository>
-			<id>central</id>
-			<url>https://almostrealism.jfrog.io/artifactory/default-libs-release</url>
+			<id>almostrealism</id>
+			<url>https://maven.pkg.github.com/almostrealism/common</url>
 			<releases><enabled>true</enabled></releases>
 			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
