--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Almost Realism Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/almostrealism/common</url>
+			<url>https://maven.pkg.github.com/almostrealism/rings</url>
 		</repository>
 	</distributionManagement>
 
