--- a/absorption/pom.xml
+++ b/absorption/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>Rings</artifactId>
 		<groupId>com.almostrealism</groupId>
-		<version>0.31</version>
+		<version>0.31.1</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -15,19 +15,19 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-physics</artifactId>
-			<version>0.60</version>
+			<version>${common.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>ar-engine</artifactId>
-			<version>0.31</version>
+			<version>0.31.1</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>ar-primitives</artifactId>
-			<version>0.31</version>
+			<version>0.31.1</version>
 		</dependency>
 	</dependencies>
 </project>
