--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 
 			<dependency>
 				<groupId>io.flowtree</groupId>
+				<artifactId>ar-flowtree</artifactId>
+				<version>${flowtree.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>io.flowtree</groupId>
 				<artifactId>ar-flowtreeapi</artifactId>
 				<version>${flowtree.version}</version>
 			</dependency>
