--- a/shading/pom.xml
+++ b/shading/pom.xml
@@ -15,6 +15,7 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-utils</artifactId>
+			<version>0.63</version>
 		</dependency>
 
 		<dependency>
