--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 	</properties>
 
 	<groupId>com.almostrealism</groupId>
-	<artifactId>Rings</artifactId>
+	<artifactId>rings</artifactId>
 	<version>0.35</version>
 
 	<modules>
