--- a/rings-ml/pom.xml
+++ b/rings-ml/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.almostrealism</groupId>
-		<artifactId>Rings</artifactId>
+		<artifactId>rings</artifactId>
 		<version>0.35</version>
 	</parent>
 
