Updated UNetTest to use AdamOptimizer. Cleaned up pom files.

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
 			</dependency>
 
 			<dependency>
+				<groupId>org.almostrealism</groupId>
+				<artifactId>ar-ml</artifactId>
+				<version>${common.version}</version>
+			</dependency>
+
+			<dependency>
 				<groupId>io.flowtree</groupId>
 				<artifactId>ar-flowtree</artifactId>
 				<version>${flowtree.version}</version>
