--- a/generate/pom.xml
+++ b/generate/pom.xml
@@ -14,7 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-audio</artifactId>
+			<artifactId>ar-pattern</artifactId>
 			<version>0.39</version>
 		</dependency>
 	</dependencies>
