--- a/generate/pom.xml
+++ b/generate/pom.xml
@@ -23,5 +23,11 @@
 			<artifactId>ar-rings-ml</artifactId>
 			<version>0.41</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
