--- a/devtools/docker-compose.yml
+++ b/devtools/docker-compose.yml
@@ -1,35 +1,67 @@
 version: '3.8'
 
 services:
-  rings-dev:
+  rings-dev-sandbox-a:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: rings-dev-environment
+    container_name: dev-sandbox-a
     volumes:
-      # Mount the entire AlmostRealism directory
-      - /Users/michael/AlmostRealism/sandboxA/:/workspace/AlmostRealism
-      # Mount Maven cache to speed up builds
-      - maven-cache:/home/developer/.m2
-      # Mount Claude Code config (if you want to persist CLI settings)
+      - /Users/michael/AlmostRealism/sandboxA/:/workspace/project
       - claude-config:/home/developer/.config/claude
-    working_dir: /workspace/AlmostRealism
-    # Keep container running
+    working_dir: /workspace/project
     stdin_open: true
     tty: true
-    # Optional: Expose ports if needed for debugging
-    # ports:
-    #   - "8080:8080"
-    # Environment variables
     environment:
       - TERM=xterm-256color
-      # Increase Maven memory for large builds
       - MAVEN_OPTS=-Xmx4096m -XX:MaxMetaspaceSize=1024m
-    # Optional: Share host network for easier testing
-    # network_mode: host
+    network_mode: host
+  rings-dev-sandbox-b:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: dev-sandbox-b
+    volumes:
+      - /Users/michael/AlmostRealism/sandboxB/:/workspace/project
+      - claude-config:/home/developer/.config/claude
+    working_dir: /workspace/project
+    stdin_open: true
+    tty: true
+    environment:
+      - TERM=xterm-256color
+      - MAVEN_OPTS=-Xmx4096m -XX:MaxMetaspaceSize=1024m
+    network_mode: host
+  rings-dev-sandbox-c:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: dev-sandbox-c
+    volumes:
+      - /Users/michael/AlmostRealism/sandboxC/:/workspace/project
+      - claude-config:/home/developer/.config/claude
+    working_dir: /workspace/project
+    stdin_open: true
+    tty: true
+    environment:
+      - TERM=xterm-256color
+      - MAVEN_OPTS=-Xmx4096m -XX:MaxMetaspaceSize=1024m
+    network_mode: host
+  rings-dev-sandbox-d:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: dev-sandbox-d
+    volumes:
+      - /Users/michael/AlmostRealism/sandboxD/:/workspace/project
+      - claude-config:/home/developer/.config/claude
+    working_dir: /workspace/project
+    stdin_open: true
+    tty: true
+    environment:
+      - TERM=xterm-256color
+      - MAVEN_OPTS=-Xmx4096m -XX:MaxMetaspaceSize=1024m
+    network_mode: host
 
 volumes:
-  maven-cache:
-    driver: local
   claude-config:
     driver: local
