--- a/visual-space/pom.xml
+++ b/visual-space/pom.xml
@@ -13,9 +13,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-visual</artifactId>
-			<version>0.43</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-space</artifactId>
 		</dependency>
 
 		<dependency>
