--- a/gl/pom.xml
+++ b/gl/pom.xml
@@ -14,18 +14,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.almostrealism</groupId>
-			<artifactId>ar-color</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>org.almostrealism</groupId>
-			<artifactId>ar-space</artifactId>
-		</dependency>
-
-		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-shading</artifactId>
-			<version>0.43</version>
+			<artifactId>ar-render</artifactId>
 		</dependency>
 
 		<dependency>
