--- a/pom.xml
+++ b/pom.xml
@@ -135,13 +135,13 @@
 			<dependency>
 				<groupId>org.jogamp.gluegen</groupId>
 				<artifactId>gluegen-rt-main</artifactId>
-				<version>2.3.2</version>
+				<version>2.5.0</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.jogamp.jogl</groupId>
 				<artifactId>jogl-all-main</artifactId>
-				<version>2.3.2</version>
+				<version>2.5.0</version>
 			</dependency>
 
 			<dependency>
@@ -240,6 +240,11 @@
 		<repository>
 			<id>google</id>
 			<url>https://maven.google.com/</url>
+		</repository>
+
+		<repository>
+			<id>jogamp</id>
+			<url>https://jogamp.org/deployment/maven/</url>
 		</repository>
 
 <!--		<repository>-->
