--- a/spatial/pom.xml
+++ b/spatial/pom.xml
@@ -23,5 +23,12 @@
 			<artifactId>ar-remote</artifactId>
 			<version>0.43</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
