--- a/remote/pom.xml
+++ b/remote/pom.xml
@@ -81,9 +81,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-audio-space</artifactId>
-			<version>0.44</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-compose</artifactId>
 		</dependency>
 
 		<dependency>
