--- a/spatial/pom.xml
+++ b/spatial/pom.xml
@@ -13,9 +13,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-audio-space</artifactId>
-			<version>0.44</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-compose</artifactId>
 		</dependency>
 
 		<dependency>
